--- a/src/Components/Services/Services.module.css
+++ b/src/Components/Services/Services.module.css
@@ -2,74 +2,80 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
 .grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    padding: 4rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  padding: 8rem;
 
-    gap: 2rem;
+  gap: 8rem;
 }
+
 .serviceBox {
-    display: flex;
-    flex-direction: column;
-    padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
 
-    align-items: flex-start;
-    justify-content: flex-start;
-    border: 1.5px solid #EF8A17;
-    border-radius: 9px;
-    background-color: #EF8A17
-    ;
-    cursor: pointer;
-    /* color: #E9E220; */
-    color: white;
-    line-height: 1.4;
-    position: relative;
-overflow: hidden;
-/* width: 100%; */
-height: 100%;
+  align-items: flex-start;
+  justify-content: flex-start;
+  border: 1.5px solid #EF8A17;
+  border-radius: 9px;
+  background-color: #EF8A17;
+  cursor: pointer;
+  /* color: #E9E220; */
+  color: white;
+  line-height: 1.4;
+  position: relative;
+  overflow: hidden;
+  /* width: 100%; */
+  height: 100%;
 }
+
 .serviceBox:hover {
 
- scale: 1.02;
- color: #EF8A17;
- box-shadow: 2px 5px 10px rgba(0, 0, 0, .2);
+  scale: 1.02;
+  color: #EF8A17;
+  box-shadow: 2px 5px 10px rgba(0, 0, 0, .2);
 
 
 
 }
 
-.serviceBox:hover .layer{
-bottom: 0%;
+.serviceBox:hover .layer {
+  bottom: 0%;
 
 }
-.serviceBox:hover h4, .serviceBox:hover p {
+
+.serviceBox:hover h4,
+.serviceBox:hover p {
   color: #EF8A17;
   z-index: 2;
 }
 
 .serviceBox p {
-    padding-top: 16rem;
-    text-align: left;
- font-size: 1.8rem;
- font-family: 'Lato', sans-serif;
+  padding-top: 14rem;
+  text-align: left;
+  font-size: 2rem;
+  font-family: 'Lato', sans-serif;
 }
-.serviceBox h4  {
-    font-size: 2.4rem;
-    font-family: 'eklektic-normal', sans-serif;
-    font-family: 'Rubik', sans-serif;
+
+.serviceBox h4 {
+  font-size: 2.4rem;
+  font-family: 'eklektic-normal', sans-serif;
+  font-family: 'Rubik', sans-serif;
 }
+
 .serviceHead {
-    font-size: 3.6rem;
-     font-family: 'Rubik', sans-serif;
-     padding: 3rem;
-     text-align: center;
-     background: linear-gradient(to bottom, #EF8A17, white);
-     -webkit-background-clip: text;
-     -webkit-text-fill-color: transparent;
-     background-clip: text;
-     color: transparent;
-    cursor: pointer;
+  font-size: 3.6rem;
+  font-family: 'Rubik', sans-serif;
+  padding: 3rem;
+  text-align: center;
+  background: linear-gradient(to bottom, #EF8A17, white);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  color: transparent;
+  cursor: pointer;
 }
+
 .serviceHead:hover {
   font-size: 3.6rem;
   font-family: 'Rubik', sans-serif;
@@ -80,85 +86,90 @@ bottom: 0%;
   -webkit-text-fill-color: transparent;
   background-clip: text;
   color: transparent;
- cursor: pointer;
+  cursor: pointer;
 }
 
 
-@keyframes waveAnimation{
-    from {
-      background-position-x: 0%;
-    }
-    to {
-      background-position-x: 200%;
-    }
-  }
-  .layer {
-    background: white;
-    position: absolute;
-    height: 100%;
-    width: 100%;
-bottom: calc(100% - .1px);
-left: 0;
-z-index: 1;
-transition:0.5s;
+@keyframes waveAnimation {
+  from {
+    background-position-x: 0%;
   }
 
+  to {
+    background-position-x: 200%;
+  }
+}
 
- @media (max-width : 70em) {
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      padding: 4rem;
-  
-      gap: 2rem;
-  } 
-  } 
-  @media (max-width : 48em) {
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      padding: 4rem;
-  
-      gap: 2rem;
-  } 
+.layer {
+  background: white;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  bottom: calc(100% - .1px);
+  left: 0;
+  z-index: 1;
+  transition: 0.5s;
+}
+
+
+@media (max-width : 70em) {
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 4rem;
+
+    gap: 2rem;
+  }
+}
+
+@media (max-width : 48em) {
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 4rem;
+
+    gap: 2rem;
+  }
+
   .serviceBox p {
     padding-top: 9rem;
     text-align: left;
- font-size: 1.6rem;
- font-family: 'Lato', sans-serif;
-}
-.serviceBox h4  {
+    font-size: 1.6rem;
+    font-family: 'Lato', sans-serif;
+  }
+
+  .serviceBox h4 {
     font-size: 2rem;
     font-family: 'eklektic-normal', sans-serif;
     font-family: 'Rubik', sans-serif;
+  }
 }
-  } 
-  @media (max-width : 39em) {
-    .grid {
-      display: flex;
-      flex-direction: column;
 
-      padding: 4rem;
-  
-      gap: 2rem;
-  } 
+@media (max-width : 39em) {
+  .grid {
+    display: flex;
+    flex-direction: column;
+
+    padding: 4rem;
+
+    gap: 2rem;
+  }
+
   .serviceBox p {
     padding-top: 9rem;
     text-align: left;
- font-size: 1.6rem;
- font-family: 'Lato', sans-serif;
-}
-.serviceBox h4  {
+    font-size: 1.6rem;
+    font-family: 'Lato', sans-serif;
+  }
+
+  .serviceBox h4 {
     font-size: 2rem;
     font-family: 'eklektic-normal', sans-serif;
     font-family: 'Rubik', sans-serif;
+  }
+
+  .serviceHead {
+    font-size: 2.4rem;
+    text-align: center;
+  }
 }
-.serviceHead {
-  font-size: 2.4rem;
-  text-align: center;
-}
-  } 
-
-
-
-  
